objects/Allergies__c.object
<CustomObject>
    <fields>
        <fullName>Allergy__c</fullName>
        <label>Allergy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Acariens</fullName>
                </value>
                <value>
                    <fullName>ACE inhibitors</fullName>
                </value>
                <value>
                    <fullName>Acetaminophen</fullName>
                </value>
                <value>
                    <fullName>Acétaminophène</fullName>
                </value>
                <value>
                    <fullName>Acetominophen Tramadol Hydrochloride</fullName>
                </value>
                <value>
                    <fullName>Acetyl cysteine</fullName>
                </value>
                <value>
                    <fullName>Acétyl cystéine</fullName>
                </value>
                <value>
                    <fullName>Acide alendronique</fullName>
                </value>
                <value>
                    <fullName>ACIDE NALIDIXIQUE</fullName>
                </value>
                <value>
                    <fullName>Aerosols (Insect</fullName>
                </value>
                <value>
                    <fullName>Aérosols (insectes</fullName>
                </value>
                <value>
                    <fullName>Agents chimiothérapeutiques (asparaginase</fullName>
                </value>
                <value>
                    <fullName>Agents de conservations (parabène et sulfites)</fullName>
                </value>
                <value>
                    <fullName>Agents de diagnostic (fluoroscéine</fullName>
                </value>
                <value>
                    <fullName>AINS (tous)</fullName>
                </value>
                <value>
                    <fullName>Albumine sérique humaine</fullName>
                </value>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
                <value>
                    <fullName>Alcool</fullName>
                </value>
                <value>
                    <fullName>Aldosterone Antagonists (Spironolactone</fullName>
                </value>
                <value>
                    <fullName>Alendronic Acid</fullName>
                </value>
                <value>
                    <fullName>Allerg. aux prod. cosmétiques</fullName>
                </value>
                <value>
                    <fullName>Allerg. herbe à puce et plantes</fullName>
                </value>
                <value>
                    <fullName>Allerg.yeux (conjonctiv. allerg.)</fullName>
                </value>
                <value>
                    <fullName>Allergie à l&apos;herbe à poux</fullName>
                </value>
                <value>
                    <fullName>Allergie à la cigarette</fullName>
                </value>
                <value>
                    <fullName>Allergie à la moisissure</fullName>
                </value>
                <value>
                    <fullName>Allergie à la pénicilline</fullName>
                </value>
                <value>
                    <fullName>Allergie à la poussière</fullName>
                </value>
                <value>
                    <fullName>Allergie à l’aspirine (au salicylate)</fullName>
                </value>
                <value>
                    <fullName>Allergie au blé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Allergies</relationshipLabel>
        <relationshipName>Allergies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reaction__c</fullName>
        <label>Reaction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abdominal pain and/or cramps</fullName>
                </value>
                <value>
                    <fullName>Anaphylaxis</fullName>
                </value>
                <value>
                    <fullName>Asthma or wheezing</fullName>
                </value>
                <value>
                    <fullName>Chest tightness or pain</fullName>
                </value>
                <value>
                    <fullName>Congestion</fullName>
                </value>
                <value>
                    <fullName>Constipation</fullName>
                </value>
                <value>
                    <fullName>Diarrhea</fullName>
                </value>
                <value>
                    <fullName>Difficulty breathing</fullName>
                </value>
                <value>
                    <fullName>Difficulty swallowing</fullName>
                </value>
                <value>
                    <fullName>Dizziness</fullName>
                </value>
                <value>
                    <fullName>Eczema</fullName>
                </value>
                <value>
                    <fullName>Fatigue</fullName>
                </value>
                <value>
                    <fullName>Flushing</fullName>
                </value>
                <value>
                    <fullName>Headaches</fullName>
                </value>
                <value>
                    <fullName>Hives</fullName>
                </value>
                <value>
                    <fullName>Itchiness</fullName>
                </value>
                <value>
                    <fullName>Itchy, red, swollen eyes</fullName>
                </value>
                <value>
                    <fullName>Itchy, watery eyes</fullName>
                </value>
                <value>
                    <fullName>Mental confusion</fullName>
                </value>
                <value>
                    <fullName>Nauseau and vomiting</fullName>
                </value>
                <value>
                    <fullName>Rash</fullName>
                </value>
                <value>
                    <fullName>Reflux</fullName>
                </value>
                <value>
                    <fullName>Shortness of breathe</fullName>
                </value>
                <value>
                    <fullName>Sneezing and/or coughing</fullName>
                </value>
                <value>
                    <fullName>Swelling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sevi__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fatal</fullName>
                </value>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Allergies</label>
    <nameField>
        <displayFormat>Alg-{0000000000}</displayFormat>
        <label>Allergies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allergies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>